Use global package to avoid issues with window var

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/gregrobson/leaflet-hash-plus/issues"
   },
-  "homepage": "https://github.com/gregrobson/leaflet-hash-plus#readme"
+  "homepage": "https://github.com/gregrobson/leaflet-hash-plus#readme",
+  "dependencies": {
+    "global": "^4.4.0"
+  }
 }
