--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
     "url": "https://github.com/gregrobson/leaflet-hash-plus/issues"
   },
   "homepage": "https://github.com/gregrobson/leaflet-hash-plus#readme",
-  "dependencies": {
-    "global": "^4.4.0",
-    "leaflet": "^1.7.1"
-  }
+  "dependencies": {}
 }
